A few bug fixes

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -51,7 +51,7 @@
                 <li><a href="{{ page.relpath }}pages/library.html#supported-import-formats" class="p-man-nav-link">Supported import formats</a></li>
                 <li><a href="{{ page.relpath }}pages/library.html#exporting-content" class="p-man-nav-link">Exporting content</a></li>
                 <li><a href="{{ page.relpath }}pages/library.html#supported-export-formats" class="p-man-nav-link">Supported export formats</a></li>
-                <li><a href="{{ page.relpath }}pages/library.html##indexing--reindexing" class="p-man-nav-link">Indexing / Reindexing</a></li>
+                <li><a href="{{ page.relpath }}pages/library.html#indexing--reindexing" class="p-man-nav-link">Indexing / Reindexing</a></li>
             </ul>
         </li>
         <li>  
