content for slides and slide components

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -113,7 +113,7 @@
                     <path d="M6.002 5.5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0"/>
                     <path d="M2.002 1a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V3a2 2 0 0 0-2-2zm12 1a1 1 0 0 1 1 1v6.5l-3.777-1.947a.5.5 0 0 0-.577.093l-3.71 3.71-2.66-1.772a.5.5 0 0 0-.63.062L1.002 12V3a1 1 0 0 1 1-1z"/>
                 </svg>
-                <span class="ps-1">Slides</span>
+                <span class="ps-1">Slide basics</span>
             </strong>
             <ul class="list-unstyled small pb-3">
                 <li><a href="{{ page.relpath }}pages/slides.html" class="p-man-nav-link">Slides</a></li>
@@ -123,19 +123,28 @@
                 <li><a href="{{ page.relpath }}pages/slides.html#media" class="p-man-nav-link">Media</a></li>
                 <li><a href="{{ page.relpath }}pages/slides.html#backgrounds--borders" class="p-man-nav-link">Backgrounds / borders</a></li>
                 <li><a href="{{ page.relpath }}pages/slides.html#shadow--glow" class="p-man-nav-link">Shadow / glow</a></li>
-                <li><a href="{{ page.relpath }}pages/slides.html#font--padding--fill" class="p-man-nav-link">Font / padding / fill</a></li>
-
-                <li><a href="{{ page.relpath }}pages/slides.html#text-component" class="p-man-nav-link">Text component</a></li>
-                <li><a href="{{ page.relpath }}pages/slides.html#placeholder-component" class="p-man-nav-link">Placeholder component</a></li>
-                <!-- how they work with bibles/songs, what the types/etc are -->
-                <li><a href="{{ page.relpath }}pages/slides.html#datetime-component" class="p-man-nav-link">Date/time component</a></li>
-                <li><a href="{{ page.relpath }}pages/slides.html#countdown-component" class="p-man-nav-link">Countdown component</a></li>
-                <li><a href="{{ page.relpath }}pages/slides.html#media-component" class="p-man-nav-link">Media component</a></li>
-                <!-- types of media and options -->
-                <li><a href="{{ page.relpath }}pages/slides.html#snap-to-grid" class="p-man-nav-link">Snap to grid</a></li>
-                <li><a href="{{ page.relpath }}pages/slides.html#layers" class="p-man-nav-link">Layers</a></li>
-                <li><a href="{{ page.relpath }}pages/slides.html#drag--drop" class="p-man-nav-link">Drag & drop</a></li>
-                <!-- drag to import and use -->
+                <li><a href="{{ page.relpath }}pages/slides.html#font--fill--padding" class="p-man-nav-link">Font / fill / padding</a></li>
+            </ul>
+        </li>
+        <li>
+            <strong>
+                <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="#cd4747">
+                    <path d="M5 2V0H0v5h2v6H0v5h5v-2h6v2h5v-5h-2V5h2V0h-5v2zm6 1v2h2v6h-2v2H5v-2H3V5h2V3zm1-2h3v3h-3zm3 11v3h-3v-3zM4 15H1v-3h3zM1 4V1h3v3z"/>
+                </svg>
+                <span class="ps-1">Slide components</span>
+            </strong>
+            <ul class="list-unstyled small pb-3">
+                <li><a href="{{ page.relpath }}pages/slide-components.html#text-component" class="p-man-nav-link">Text component</a></li>
+                <li><a href="{{ page.relpath }}pages/slide-components.html#placeholder-component" class="p-man-nav-link">Placeholder component</a></li>
+                <li><a href="{{ page.relpath }}pages/slide-components.html#datetime-component" class="p-man-nav-link">Date/time component</a></li>
+                <li><a href="{{ page.relpath }}pages/slide-components.html#countdown-component" class="p-man-nav-link">Countdown component</a></li>
+                <li><a href="{{ page.relpath }}pages/slide-components.html#media-component" class="p-man-nav-link">Media component</a></li>
+                <li><a href="{{ page.relpath }}pages/slide-components.html#moving-components" class="p-man-nav-link">Moving components</a></li>
+                <li><a href="{{ page.relpath }}pages/slide-components.html#sizing-components" class="p-man-nav-link">Sizing components</a></li>
+                <li><a href="{{ page.relpath }}pages/slide-components.html#snap-to-grid" class="p-man-nav-link">Snap to grid</a></li>
+                <li><a href="{{ page.relpath }}pages/slide-components.html#layers" class="p-man-nav-link">Layers</a></li>
+                <li><a href="{{ page.relpath }}pages/slide-components.html#copy--cut--paste" class="p-man-nav-link">Copy / cut / paste</a></li>
+                <li><a href="{{ page.relpath }}pages/slide-components.html#deleting-components" class="p-man-nav-link">Deleting components</a></li>
             </ul>
         </li>
         <li>
