More content added

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -48,6 +48,7 @@
                 <li><a href="{{ page.relpath }}pages/library.html#selecting-multiple-items" class="p-man-nav-link">Selecting multiple items</a></li>
                 <li><a href="{{ page.relpath }}pages/library.html#duplicate--copy" class="p-man-nav-link">Duplicate / copy</a></li>
                 <li><a href="{{ page.relpath }}pages/library.html#rename--delete" class="p-man-nav-link">Rename / delete</a></li>
+                <li><a href="{{ page.relpath }}pages/library.html#create-slide" class="p-man-nav-link">Create slide</a></li>
                 <li><a href="{{ page.relpath }}pages/library.html#importing-content" class="p-man-nav-link">Importing content</a></li>
                 <li><a href="{{ page.relpath }}pages/library.html#supported-import-formats" class="p-man-nav-link">Supported import formats</a></li>
                 <li><a href="{{ page.relpath }}pages/library.html#exporting-content" class="p-man-nav-link">Exporting content</a></li>
@@ -152,21 +153,31 @@
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" style="fill: var(--bs-pink)">
                     <path d="M0 4s0-2 2-2h12s2 0 2 2v6s0 2-2 2h-4q0 1 .25 1.5H11a.5.5 0 0 1 0 1H5a.5.5 0 0 1 0-1h.75Q6 13 6 12H2s-2 0-2-2zm1.398-.855a.76.76 0 0 0-.254.302A1.5 1.5 0 0 0 1 4.01V10c0 .325.078.502.145.602q.105.156.302.254a1.5 1.5 0 0 0 .538.143L2.01 11H14c.325 0 .502-.078.602-.145a.76.76 0 0 0 .254-.302 1.5 1.5 0 0 0 .143-.538L15 9.99V4c0-.325-.078-.502-.145-.602a.76.76 0 0 0-.302-.254A1.5 1.5 0 0 0 13.99 3H2c-.325 0-.502.078-.602.145"/>
                 </svg>
-                <span class="ps-1">Preseting Content</span>
+                <span class="ps-1">Presenting Content</span>
             </strong>
             <ul class="list-unstyled small pb-3">
-                <li><a href="{{ page.relpath }}pages/config.html" class="p-man-nav-link">Screen Configuration</a></li>
-                <!-- Designating screens, identifying, renaming, hiding, linking, etc. -->
-                <li><a href="{{ page.relpath }}pages/ndi.html" class="p-man-nav-link">NDI</a></li>
-                <!-- What is it, how it works, refresh rate, OBS, etc. -->
-                <li><a href="{{ page.relpath }}pages/queue.html" class="p-man-nav-link">Queue Management</a></li>
-                <!-- add/remove from queue -->
-                <li><a href="{{ page.relpath }}pages/notifications.html" class="p-man-nav-link">Notifications</a></li>
-                <!-- export format support -->
                 <li><a href="{{ page.relpath }}pages/presenting.html" class="p-man-nav-link">Presenting</a></li>
-                <!-- show, hide, auto-show, preview transition, etc. -->
-                <li><a href="{{ page.relpath }}pages/searching.html" class="p-man-nav-link">Searching</a></li>
-                <!-- export format support -->
+                <li><a href="{{ page.relpath }}pages/presenting.html#display-setup" class="p-man-nav-link">Display setup</a></li>
+                <li><a href="{{ page.relpath }}pages/presenting.html#adding-displays" class="p-man-nav-link">Adding displays</a></li>
+                <li><a href="{{ page.relpath }}pages/presenting.html#identifying-a-display" class="p-man-nav-link">Identifying a display</a></li>
+                <li><a href="{{ page.relpath }}pages/presenting.html#naming-a-display" class="p-man-nav-link">Naming a display</a></li>
+                <li><a href="{{ page.relpath }}pages/presenting.html#primary-display" class="p-man-nav-link">Primary display</a></li>
+                <li><a href="{{ page.relpath }}pages/presenting.html#hiding-a-display" class="p-man-nav-link">Hiding a display</a></li>
+                <li><a href="{{ page.relpath }}pages/presenting.html#linking-displays" class="p-man-nav-link">Linking displays</a></li>
+                <li><a href="{{ page.relpath }}pages/presenting.html#adding-an-ndi-display" class="p-man-nav-link">Adding an NDI® display</a></li>
+                
+                <li><a href="{{ page.relpath }}pages/presenting.html#slide-preview" class="p-man-nav-link">Slide preview</a></li>
+                <li><a href="{{ page.relpath }}pages/presenting.html#show--hide" class="p-man-nav-link">Show / hide</a></li>
+                <li><a href="{{ page.relpath }}pages/presenting.html#preview-transition" class="p-man-nav-link">Preview transition</a></li>
+                <li><a href="{{ page.relpath }}pages/presenting.html#auto-show" class="p-man-nav-link">Auto-show</a></li>
+                <li><a href="{{ page.relpath }}pages/presenting.html#add-to-queue" class="p-man-nav-link">Add to queue</a></li>
+                <li><a href="{{ page.relpath }}pages/presenting.html#presenting-bible-verses" class="p-man-nav-link">Presenting Bible verses</a></li>
+                <li><a href="{{ page.relpath }}pages/presenting.html#presenting-song-lyrics" class="p-man-nav-link">Presenting song lyrics</a></li>
+                <li><a href="{{ page.relpath }}pages/presenting.html#presenting-slides" class="p-man-nav-link">Presenting slides</a></li>
+                <li><a href="{{ page.relpath }}pages/presenting.html#presenting-notifications" class="p-man-nav-link">Presenting notifications</a></li>
+                <li><a href="{{ page.relpath }}pages/presenting.html#queue-management" class="p-man-nav-link">Queue management</a></li>
+                <li><a href="{{ page.relpath }}pages/presenting.html#bible-searching" class="p-man-nav-link">Bible searching</a></li>
+                <li><a href="{{ page.relpath }}pages/presenting.html#song-searching" class="p-man-nav-link">Song searching</a></li>
             </ul>
         </li>
         <li>
