split up the presenting section into display setup and presenting

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -153,19 +153,30 @@
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" style="fill: var(--bs-pink)">
                     <path d="M0 4s0-2 2-2h12s2 0 2 2v6s0 2-2 2h-4q0 1 .25 1.5H11a.5.5 0 0 1 0 1H5a.5.5 0 0 1 0-1h.75Q6 13 6 12H2s-2 0-2-2zm1.398-.855a.76.76 0 0 0-.254.302A1.5 1.5 0 0 0 1 4.01V10c0 .325.078.502.145.602q.105.156.302.254a1.5 1.5 0 0 0 .538.143L2.01 11H14c.325 0 .502-.078.602-.145a.76.76 0 0 0 .254-.302 1.5 1.5 0 0 0 .143-.538L15 9.99V4c0-.325-.078-.502-.145-.602a.76.76 0 0 0-.302-.254A1.5 1.5 0 0 0 13.99 3H2c-.325 0-.502.078-.602.145"/>
                 </svg>
-                <span class="ps-1">Presenting Content</span>
+                <span class="ps-1">Display setup</span>
+            </strong>
+            <ul class="list-unstyled small pb-3">
+                <li><a href="{{ page.relpath }}pages/displays.html" class="p-man-nav-link">Display setup</a></li>
+                <li><a href="{{ page.relpath }}pages/displays.html#display-controllers" class="p-man-nav-link">Display controllers</a></li>
+                <li><a href="{{ page.relpath }}pages/displays.html#adding-displays" class="p-man-nav-link">Adding displays</a></li>
+                <li><a href="{{ page.relpath }}pages/displays.html#identifying-a-display" class="p-man-nav-link">Identifying a display</a></li>
+                <li><a href="{{ page.relpath }}pages/displays.html#naming-a-display" class="p-man-nav-link">Naming a display</a></li>
+                <li><a href="{{ page.relpath }}pages/displays.html#primary-display" class="p-man-nav-link">Primary display</a></li>
+                <li><a href="{{ page.relpath }}pages/displays.html#hiding-a-display" class="p-man-nav-link">Hiding a display</a></li>
+                <li><a href="{{ page.relpath }}pages/displays.html#linking-displays" class="p-man-nav-link">Linking displays</a></li>
+                <li><a href="{{ page.relpath }}pages/displays.html#adding-an-ndi-display" class="p-man-nav-link">Adding an NDI® display</a></li>
+            </ul>
+        </li>
+        <li>
+            <strong>
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#f0d00d">
+                    <path d="M6.79 5.093A.5.5 0 0 0 6 5.5v5a.5.5 0 0 0 .79.407l3.5-2.5a.5.5 0 0 0 0-.814z"/>
+                    <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm15 0a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1z"/>
+                </svg>
+                <span class="ps-1">Presenting content</span>
             </strong>
             <ul class="list-unstyled small pb-3">
                 <li><a href="{{ page.relpath }}pages/presenting.html" class="p-man-nav-link">Presenting</a></li>
-                <li><a href="{{ page.relpath }}pages/presenting.html#display-setup" class="p-man-nav-link">Display setup</a></li>
-                <li><a href="{{ page.relpath }}pages/presenting.html#adding-displays" class="p-man-nav-link">Adding displays</a></li>
-                <li><a href="{{ page.relpath }}pages/presenting.html#identifying-a-display" class="p-man-nav-link">Identifying a display</a></li>
-                <li><a href="{{ page.relpath }}pages/presenting.html#naming-a-display" class="p-man-nav-link">Naming a display</a></li>
-                <li><a href="{{ page.relpath }}pages/presenting.html#primary-display" class="p-man-nav-link">Primary display</a></li>
-                <li><a href="{{ page.relpath }}pages/presenting.html#hiding-a-display" class="p-man-nav-link">Hiding a display</a></li>
-                <li><a href="{{ page.relpath }}pages/presenting.html#linking-displays" class="p-man-nav-link">Linking displays</a></li>
-                <li><a href="{{ page.relpath }}pages/presenting.html#adding-an-ndi-display" class="p-man-nav-link">Adding an NDI® display</a></li>
-                
                 <li><a href="{{ page.relpath }}pages/presenting.html#slide-preview" class="p-man-nav-link">Slide preview</a></li>
                 <li><a href="{{ page.relpath }}pages/presenting.html#show--hide" class="p-man-nav-link">Show / hide</a></li>
                 <li><a href="{{ page.relpath }}pages/presenting.html#preview-transition" class="p-man-nav-link">Preview transition</a></li>
