More manual changes

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -19,6 +19,24 @@
         </li>
         <li>
             <strong>
+                <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em"  style="fill: var(--bs-pink)">
+					<path d="M8 0c-.787 0-1.292.592-1.572 1.151A4.35 4.35 0 0 0 6 3v3.691l-2 1V7.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.191l-1.17.585A1.5 1.5 0 0 0 0 10.618V12a.5.5 0 0 0 .582.493l1.631-.272.313.937a.5.5 0 0 0 .948 0l.405-1.214 2.21-.369.375 2.253-1.318 1.318A.5.5 0 0 0 5.5 16h5a.5.5 0 0 0 .354-.854l-1.318-1.318.375-2.253 2.21.369.405 1.214a.5.5 0 0 0 .948 0l.313-.937 1.63.272A.5.5 0 0 0 16 12v-1.382a1.5 1.5 0 0 0-.83-1.342L14 8.691V7.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v.191l-2-1V3c0-.568-.14-1.271-.428-1.849C9.292.591 8.787 0 8 0M7 3c0-.432.11-.979.322-1.401C7.542 1.159 7.787 1 8 1s.458.158.678.599C8.889 2.02 9 2.569 9 3v4a.5.5 0 0 0 .276.447l5.448 2.724a.5.5 0 0 1 .276.447v.792l-5.418-.903a.5.5 0 0 0-.575.41l-.5 3a.5.5 0 0 0 .14.437l.646.646H6.707l.647-.646a.5.5 0 0 0 .14-.436l-.5-3a.5.5 0 0 0-.576-.411L1 11.41v-.792a.5.5 0 0 1 .276-.447l5.448-2.724A.5.5 0 0 0 7 7z"/>
+                </svg>
+                <span class="ps-1">Quick start</span>
+            </strong>
+            <ul class="list-unstyled small pb-3">
+                <li><a href="{{ page.relpath }}{{ page.quickstart_page }}#quick-start" class="p-man-nav-link">Getting started</a></li>
+                <li><a href="{{ page.relpath }}{{ page.quickstart_page }}#qs-configure-system" class="p-man-nav-link">1. System configuration</a></li>
+                <li><a href="{{ page.relpath }}{{ page.quickstart_page }}#qs-install" class="p-man-nav-link">2. Install Praisenter</a></li>
+                <li><a href="{{ page.relpath }}{{ page.quickstart_page }}#qs-create-workspace" class="p-man-nav-link">3. Create a workspace</a></li>
+                <li><a href="{{ page.relpath }}{{ page.quickstart_page }}#qs-setup-displays" class="p-man-nav-link">4. Setup displays</a></li>
+                <li><a href="{{ page.relpath }}{{ page.quickstart_page }}#qs-import-bible" class="p-man-nav-link">5. Import a Bible</a></li>
+                <li><a href="{{ page.relpath }}{{ page.quickstart_page }}#qs-create-slides" class="p-man-nav-link">6. Create slides</a></li>
+                <li><a href="{{ page.relpath }}{{ page.quickstart_page }}#qs-present-slides" class="p-man-nav-link">7. Present slides</a></li>
+            </ul>
+        </li>
+        <li>
+            <strong>
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" style="fill: var(--bs-warning)">
                     <path d="M.54 3.87.5 3a2 2 0 0 1 2-2h3.672a2 2 0 0 1 1.414.586l.828.828A2 2 0 0 0 9.828 3h3.982a2 2 0 0 1 1.992 2.181l-.637 7A2 2 0 0 1 13.174 14H2.826a2 2 0 0 1-1.991-1.819l-.637-7a2 2 0 0 1 .342-1.31zM2.19 4a1 1 0 0 0-.996 1.09l.637 7a1 1 0 0 0 .995.91h10.348a1 1 0 0 0 .995-.91l.637-7A1 1 0 0 0 13.81 4zm4.69-1.707A1 1 0 0 0 6.172 2H2.5a1 1 0 0 0-1 .981l.006.139q.323-.119.684-.12h5.396z"/>
                 </svg>
@@ -202,9 +220,18 @@
             </strong>
             <ul class="list-unstyled small pb-3">
                 <li><a href="{{ page.relpath }}{{ page.miscellaneous_page }}#settings" class="p-man-nav-link">Settings</a></li>
+                <li><a href="{{ page.relpath }}{{ page.miscellaneous_page }}#general-settings" class="p-man-nav-link">General settings</a></li>
+                <li><a href="{{ page.relpath }}{{ page.miscellaneous_page }}#slide-settings" class="p-man-nav-link">Slide settings</a></li>
+                <li><a href="{{ page.relpath }}{{ page.miscellaneous_page }}#bible-settings" class="p-man-nav-link">Bible settings</a></li>
+                <li><a href="{{ page.relpath }}{{ page.miscellaneous_page }}#media-settings" class="p-man-nav-link">Media settings</a></li>
+                <li><a href="{{ page.relpath }}{{ page.miscellaneous_page }}#audio-settings" class="p-man-nav-link">Audio settings</a></li>
+                <li><a href="{{ page.relpath }}{{ page.miscellaneous_page }}#video-settings" class="p-man-nav-link">Video settings</a></li>
+                <li><a href="{{ page.relpath }}{{ page.miscellaneous_page }}#ndi-settings" class="p-man-nav-link">NDI® settings</a></li>
                 <li><a href="{{ page.relpath }}{{ page.miscellaneous_page }}#zoom" class="p-man-nav-link">Zoom</a></li>
-                <li><a href="{{ page.relpath }}{{ page.miscellaneous_page }}#tasks" class="p-man-nav-link">Tasks</a></li>
-                <li><a href="{{ page.relpath }}{{ page.miscellaneous_page }}#logs" class="p-man-nav-link">Logs</a></li>
+                <li><a href="{{ page.relpath }}{{ page.miscellaneous_page }}#task-log" class="p-man-nav-link">Task log</a></li>
+                <li><a href="{{ page.relpath }}{{ page.miscellaneous_page }}#log-files" class="p-man-nav-link">Log files</a></li>
+                <li><a href="{{ page.relpath }}{{ page.miscellaneous_page }}#check-for-update" class="p-man-nav-link">Check for update</a></li>
+                <li><a href="{{ page.relpath }}{{ page.miscellaneous_page }}#about" class="p-man-nav-link">About</a></li>
             </ul>
         </li>
     </ul>
