Proof reading updates

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -14,7 +14,7 @@
                 <li><a href="{{ page.relpath }}{{ page.home_page }}#about" class="p-man-nav-link">About</a></li>
                 <li><a href="{{ page.relpath }}{{ page.home_page }}#license" class="p-man-nav-link">License</a></li>
                 <li><a href="{{ page.relpath }}{{ page.home_page }}#minimum-requirements" class="p-man-nav-link">Minimum requirements</a></li>
-                <li><a href="{{ page.relpath }}{{ page.home_page }}#default-content" class="p-man-nav-link">Default content</a></li>
+                <li><a href="{{ page.relpath }}{{ page.home_page }}#default-content" class="p-man-nav-link">Default assets</a></li>
             </ul>
         </li>
         <li>
@@ -47,7 +47,7 @@
                 <li><a href="{{ page.relpath }}{{ page.workspaces_page }}#creating-workspaces" class="p-man-nav-link">Creating workspaces</a></li>
                 <li><a href="{{ page.relpath }}{{ page.workspaces_page }}#switching-workspaces" class="p-man-nav-link">Switching workspaces</a></li>
                 <li><a href="{{ page.relpath }}{{ page.workspaces_page }}#removing-workspaces" class="p-man-nav-link">Removing workspaces</a></li>
-                <li><a href="{{ page.relpath }}{{ page.workspaces_page }}#workspace-upgrade" class="p-man-nav-link">Workspace upgrades</a></li>
+                <li><a href="{{ page.relpath }}{{ page.workspaces_page }}#workspace-upgrade" class="p-man-nav-link">Workspace upgrade</a></li>
             </ul>
         </li>
         <li>  
@@ -61,15 +61,15 @@
             <ul class="list-unstyled small pb-3">
                 <li><a href="{{ page.relpath }}{{ page.library_page }}#library" class="p-man-nav-link">Library</a></li>
                 <li><a href="{{ page.relpath }}{{ page.library_page }}#searching-filtering--sorting" class="p-man-nav-link">Searching, filtering, & sorting</a></li>
-                <li><a href="{{ page.relpath }}{{ page.library_page }}#selecting-an-item" class="p-man-nav-link">Selecting an item</a></li>
-                <li><a href="{{ page.relpath }}{{ page.library_page }}#content-preview" class="p-man-nav-link">Content preview</a></li>
-                <li><a href="{{ page.relpath }}{{ page.library_page }}#selecting-multiple-items" class="p-man-nav-link">Selecting multiple items</a></li>
+                <li><a href="{{ page.relpath }}{{ page.library_page }}#selecting-an-item" class="p-man-nav-link">Selecting an asset</a></li>
+                <li><a href="{{ page.relpath }}{{ page.library_page }}#content-preview" class="p-man-nav-link">Asset preview</a></li>
+                <li><a href="{{ page.relpath }}{{ page.library_page }}#selecting-multiple-items" class="p-man-nav-link">Selecting multiple assets</a></li>
                 <li><a href="{{ page.relpath }}{{ page.library_page }}#duplicate--copy" class="p-man-nav-link">Duplicate / copy</a></li>
                 <li><a href="{{ page.relpath }}{{ page.library_page }}#lib-rename-delete" class="p-man-nav-link">Rename / delete</a></li>
                 <li><a href="{{ page.relpath }}{{ page.library_page }}#create-slide" class="p-man-nav-link">Create slide</a></li>
-                <li><a href="{{ page.relpath }}{{ page.library_page }}#importing-content" class="p-man-nav-link">Importing content</a></li>
+                <li><a href="{{ page.relpath }}{{ page.library_page }}#importing-content" class="p-man-nav-link">Importing assets</a></li>
                 <li><a href="{{ page.relpath }}{{ page.library_page }}#supported-import-formats" class="p-man-nav-link">Supported import formats</a></li>
-                <li><a href="{{ page.relpath }}{{ page.library_page }}#exporting-content" class="p-man-nav-link">Exporting content</a></li>
+                <li><a href="{{ page.relpath }}{{ page.library_page }}#exporting-content" class="p-man-nav-link">Exporting assets</a></li>
                 <li><a href="{{ page.relpath }}{{ page.library_page }}#supported-export-formats" class="p-man-nav-link">Supported export formats</a></li>
                 <li><a href="{{ page.relpath }}{{ page.library_page }}#indexing--reindexing" class="p-man-nav-link">Indexing / reindexing</a></li>
             </ul>
@@ -219,7 +219,7 @@
                 <span class="ps-1">Miscellaneous</span>
             </strong>
             <ul class="list-unstyled small pb-3">
-                <li><a href="{{ page.relpath }}{{ page.miscellaneous_page }}#settings" class="p-man-nav-link">Settings</a></li>
+                <li><a href="{{ page.relpath }}{{ page.miscellaneous_page }}#miscellaneous" class="p-man-nav-link">Settings</a></li>
                 <li><a href="{{ page.relpath }}{{ page.miscellaneous_page }}#general-settings" class="p-man-nav-link">General settings</a></li>
                 <li><a href="{{ page.relpath }}{{ page.miscellaneous_page }}#slide-settings" class="p-man-nav-link">Slide settings</a></li>
                 <li><a href="{{ page.relpath }}{{ page.miscellaneous_page }}#bible-settings" class="p-man-nav-link">Bible settings</a></li>
